--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+**/*.pyc
 
 # C extensions
 *.so
@@ -60,3 +61,8 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+
+# Pydev
+.project
+.pydevproject
+.settings
