update concurrent: future-promise

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/pyth2/concurrent/Concurrent.py=utf-8
 encoding//src/pyth2/fs/StagingFileSystem.py=utf-8
