--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/pyth2/concurrent/Concurrent.py=utf-8
+encoding//src/pyth2/fs/File.py=utf-8
 encoding//src/pyth2/fs/StagingFileSystem.py=utf-8
